Closed Bug 1804657 Opened 1 year ago Closed 11 months ago

scrollbar has no effect after set widget.content.gtk-theme-override

Categories

(Core :: Widget: Gtk, defect)

Firefox 107
defect

Tracking

()

RESOLVED FIXED
115 Branch
Tracking Status
firefox115 --- fixed

People

(Reporter: evilsign, Assigned: emilio)

Details

Attachments

(2 files)

Attached image scrollbar_problem.png

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:107.0) Gecko/20100101 Firefox/107.0

Steps to reproduce:

  1. about:config to open config window
  2. set widget.content.gtk-theme-override to 'TraditionalOK'
  3. restart firefox
  4. open any site with long content in order to show the scrollbar

Actual results:

scrollbar are not the style in 'TraditionalOk' theme

Expected results:

The scrollbar should be strict to the theme which I choose(attachment, blue one on left), but now it is still a "thin sticks"(attachment, thin one on right), just see attachment picture.

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core

Emilio, I think that's intentional, right?

Flags: needinfo?(emilio)

Yeah we can't render native scrollbars in content. If you want "regular" (instead of overlay) scrollbars you can do that from about:preferences (Always Show Scrollbars).

If you want arrows or want a wider scrollbar you need extra tweaks, but it generally works, see the widget.non-native-theme prefs.

We should clean up the code that keeps that pref around.

Flags: needinfo?(emilio)

Since the headless work (bug 1129492 and co) we realistically have no
way of rendering native scrollbars in any meaningful way. Remove dead
code that used to support using a different GTK theme on content.

Assignee: nobody → emilio
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c5ae42014f4b
Remove dead code related to having native theme in content on Linux. r=stransky
Status: ASSIGNED → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
QA Whiteboard: [qa-115b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: